--- a/boxes/base/Vagrantfile
+++ b/boxes/base/Vagrantfile
@@ -2,6 +2,10 @@ Vagrant.configure("2") do |config|
 
   config.vm.define "base_punch" do |base|
     base.vm.box = "envimation/ubuntu-xenial"
+    # Set the name of the VM (not the hostname but the actual VM name in VirtualBox)
+    base.vm.provider "virtualbox" do |v|
+      v.name = "punch-nat"
+    end
     # Install some dependencies
     base.vm.provision :shell, path: "provision.sh"
   end
