Enabled matching virtualbox guest additions on base vm with host

--- a/boxes/base/Makefile
+++ b/boxes/base/Makefile
@@ -1,7 +1,11 @@
 
-base_vm:
+base_vm:	
 	vagrant destroy -f base_punch && \
 	vagrant up base_punch --provision && \
+	vagrant vbguest base_punch  --status && \
+	vagrant vbguest base_punch --do install --auto-reboot && \
+	vagrant reload && \
+	vagrant vbguest base_punch  --status && \
 	vagrant package --output ../envimation-ubuntu-xenial-punch-nat.box && \
 	vagrant box add base-punch-nat ../envimation-ubuntu-xenial-punch-nat.box && \
 	rm -rf ../envimation-ubuntu-xenial-punch-nat.box && \
