--- a/nebula/Vagrantfile
+++ b/nebula/Vagrantfile
@@ -8,12 +8,14 @@ Vagrant.configure("2") do |config|
   config.vm.define "router" do |router|
     router.vm.box = "base-punch-nat"
     router.vm.hostname = "router"
+    # We deactive the vbguest check-up plugin, because the base image already has the corresponding version
+    router.vbguest.auto_update = false
     # Interface towards Site A
-    router.vm.network "private_network", ip: "172.18.1.1", netmask: "255.255.0.0", virtualbox__intnet: true
+    router.vm.network "private_network", ip: "172.18.1.10", netmask: "255.255.0.0", virtualbox__intnet: true
     # Interface towards Site B
-    router.vm.network "private_network", ip: "172.19.1.1", netmask: "255.255.0.0", virtualbox__intnet: true    
+    router.vm.network "private_network", ip: "172.19.1.10", netmask: "255.255.0.0", virtualbox__intnet: true    
     # Interface towards Lighthouse
-    router.vm.network "private_network", ip: "172.20.1.1", netmask: "255.255.0.0", virtualbox__intnet: true
+    router.vm.network "private_network", ip: "172.20.1.10", netmask: "255.255.0.0", virtualbox__intnet: true
     router.vm.provider "virtualbox" do |v|
       v.customize ['modifyvm', :id, '--intnet2', 'router-network-a']  # OK eth1 172.18.1.1
       v.customize ['modifyvm', :id, '--intnet3', 'router-network-b']  # OK eth2 172.19.1.1
@@ -40,6 +42,8 @@ Vagrant.configure("2") do |config|
   config.vm.define "lighthouse1" do |lighthouse1|
     lighthouse1.vm.box = "base-punch-nat"
     lighthouse1.vm.hostname = "lighthouse1"
+    # We deactive the vbguest check-up plugin, because the base image already has the corresponding version
+    lighthouse1.vbguest.auto_update = false    
     # Interface 
     lighthouse1.vm.network "private_network", ip: "172.20.1.100", netmask: "255.255.0.0", virtualbox__intnet: true
     lighthouse1.vm.provider "virtualbox" do |v|
@@ -55,7 +59,7 @@ Vagrant.configure("2") do |config|
     lighthouse1.vm.provision :shell, run: "always", inline: <<-SHELL
         echo 'Configuring Network Gateway' && \
         route del default gw 192.168.117.2 eth0 2>/dev/null || true && \
-        route add default gw 172.20.1.1 eth1 2>/dev/null || true && \
+        route add default gw 172.20.1.10 eth1 2>/dev/null || true && \
         echo 'Network Gateway Configured'
     SHELL
     # Setup Nebula
@@ -75,6 +79,8 @@ Vagrant.configure("2") do |config|
   config.vm.define "gw_a" do |gw_a|
     gw_a.vm.box = "base-punch-nat"
     gw_a.vm.hostname = "gw-a"
+    # We deactive the vbguest check-up plugin, because the base image already has the corresponding version
+    gw_a.vbguest.auto_update = false    
     gw_a.vm.network "private_network", ip: "10.40.40.40",  netmask: "255.255.255.0", virtualbox__intnet: true
     gw_a.vm.network "private_network", ip: "172.18.18.18", netmask: "255.255.0.0", virtualbox__intnet: true
     gw_a.vm.provider "virtualbox" do |v|
@@ -91,7 +97,7 @@ Vagrant.configure("2") do |config|
     gw_a.vm.provision :shell, run: "always", inline: <<-SHELL
         echo 'Configuring Network Gateway' && \
         route del default gw 192.168.112.2 eth0 2>/dev/null || true && \
-        route add default gw 172.18.1.1 eth2 2>/dev/null || true && \
+        route add default gw 172.18.1.10 eth2 2>/dev/null || true && \
         echo 'Network Gateway Configured' 
     SHELL
     # Install some dependencies, and define the NAT
@@ -104,6 +110,8 @@ Vagrant.configure("2") do |config|
   config.vm.define "node_a1" do |node_a1|
     node_a1.vm.box = "base-punch-nat"
     node_a1.vm.hostname = "node-a1"
+    # We deactive the vbguest check-up plugin, because the base image already has the corresponding version
+    node_a1.vbguest.auto_update = false    
     node_a1.vm.network "private_network", ip: "10.40.40.5", netmask: "255.255.255.0", virtualbox__intnet: true
     node_a1.vm.provider "virtualbox" do |v|
       v.customize ['modifyvm', :id, '--intnet2', 'site-a']  # OK eth1 10.40.40.5
@@ -133,6 +141,8 @@ Vagrant.configure("2") do |config|
   config.vm.define "node_a2" do |node_a2|
     node_a2.vm.box = "base-punch-nat"
     node_a2.vm.hostname = "node-a2"
+    # We deactive the vbguest check-up plugin, because the base image already has the corresponding version
+    node_a2.vbguest.auto_update = false    
     node_a2.vm.network "private_network", ip: "10.40.40.6", netmask: "255.255.255.0", virtualbox__intnet: true
     node_a2.vm.provider "virtualbox" do |v|
       v.customize ['modifyvm', :id, '--intnet2', 'site-a']  # OK eth1 10.40.40.5
@@ -166,6 +176,8 @@ Vagrant.configure("2") do |config|
   config.vm.define "gw_b" do |gw_b|
     gw_b.vm.box = "base-punch-nat"
     gw_b.vm.hostname = "gw-b"
+    # We deactive the vbguest check-up plugin, because the base image already has the corresponding version
+    gw_b.vbguest.auto_update = false    
     gw_b.vm.network "private_network", ip: "10.40.40.40",  netmask: "255.255.255.0", virtualbox__intnet: true
     gw_b.vm.network "private_network", ip: "172.19.19.19", netmask: "255.255.0.0", virtualbox__intnet: true
     gw_b.vm.provider "virtualbox" do |v|
@@ -182,7 +194,7 @@ Vagrant.configure("2") do |config|
     gw_b.vm.provision :shell, run: "always", inline: <<-SHELL
         echo 'Configuring Network Gateway' && \
         route del default gw 192.168.114.2 eth0 2>/dev/null || true && \
-        route add default gw 172.19.1.1 eth2 2>/dev/null || true && \
+        route add default gw 172.19.1.10 eth2 2>/dev/null || true && \
         echo 'Network Gateway Configured' 
     SHELL
     # Install some dependencies, and define the NAT
@@ -195,6 +207,8 @@ Vagrant.configure("2") do |config|
   config.vm.define "node_b1" do |node_b1|
     node_b1.vm.box = "base-punch-nat"
     node_b1.vm.hostname = "node-b1"
+    # We deactive the vbguest check-up plugin, because the base image already has the corresponding version
+    node_b1.vbguest.auto_update = false    
     node_b1.vm.network "private_network", ip: "10.40.40.7", netmask: "255.255.255.0", virtualbox__intnet: true
     node_b1.vm.provider "virtualbox" do |v|
       v.customize ['modifyvm', :id, '--intnet2', 'site-b']  #  eth1 10.40.40.7
@@ -224,6 +238,8 @@ Vagrant.configure("2") do |config|
   config.vm.define "node_b2" do |node_b2|
     node_b2.vm.box = "base-punch-nat"
     node_b2.vm.hostname = "node-b2"
+    # We deactive the vbguest check-up plugin, because the base image already has the corresponding version
+    node_b2.vbguest.auto_update = false    
     node_b2.vm.network "private_network", ip: "10.40.40.8", netmask: "255.255.255.0", virtualbox__intnet: true
     node_b2.vm.provider "virtualbox" do |v|
       v.customize ['modifyvm', :id, '--intnet2', 'site-b']  #  eth1 10.40.40.8
