--- a/nebula/Vagrantfile
+++ b/nebula/Vagrantfile
@@ -145,7 +145,7 @@ Vagrant.configure("2") do |config|
     node_a2.vbguest.auto_update = false    
     node_a2.vm.network "private_network", ip: "10.40.40.6", netmask: "255.255.255.0", virtualbox__intnet: true
     node_a2.vm.provider "virtualbox" do |v|
-      v.customize ['modifyvm', :id, '--intnet2', 'site-a']  # OK eth1 10.40.40.5
+      v.customize ['modifyvm', :id, '--intnet2', 'site-a']  # OK eth1 10.40.40.6
       # This deals with the default vagrant interface, we force to use the address 192.168 instead 
       # of the 10.0 and we force the MAC address. Otherwise all vms has the same internal address
       v.customize ['modifyvm', :id, '--natnet1', '192.168.116.0/24']
@@ -263,5 +263,37 @@ Vagrant.configure("2") do |config|
     node_b2.vm.provision :shell, run: "always", inline: "nohup /vagrant/files/nebula -config /vagrant/config/node-b2/config.yml &> /vagrant/logs/node_b2.out&", privileged: true
     node_b2.vm.post_up_message = "(Node) 'B2' that emulates an end point in site B -- IS UP AND READY !!!"
   end
+
+  # ------------------------------------------------------
+  # Floating Node F1, connected to the 'router-network-a'
+  # ------------------------------------------------------
+  config.vm.define "node_f1" do |node_f1|
+    node_f1.vm.box = "base-punch-nat"
+    node_f1.vm.hostname = "node-f1"
+    # We deactive the vbguest check-up plugin, because the base image already has the corresponding version
+    node_f1.vbguest.auto_update = false    
+    node_f1.vm.network "private_network", ip: "172.18.30.30", netmask: "255.255.0.0", virtualbox__intnet: true
+    node_f1.vm.provider "virtualbox" do |v|
+      v.customize ['modifyvm', :id, '--intnet2', 'router-network-a']  # OK eth1 172.18.30.30
+      # This deals with the default vagrant interface, we force to use the address 192.168 instead 
+      # of the 10.0 and we force the MAC address. Otherwise all vms has the same internal address
+      v.customize ['modifyvm', :id, '--natnet1', '192.168.126.0/24']
+      v.customize ['modifyvm', :id, '--macaddress1', "5CA1AB2E0022"]
+      v.linked_clone = true
+      v.name = "node-f1"
+    end
+    # Configuring Network Gateway for Node F1 in Site A
+    node_f1.vm.provision :shell, run: "always", inline: <<-SHELL
+        echo 'Configuring Network Gateway' && \
+        route del default gw 192.168.126.2 eth0 2>/dev/null || true && \
+        route add default gw 172.18.1.10 eth1 2>/dev/null || true && \
+        echo 'Network Gateway Configured' 
+    SHELL
+    # Install some dependencies
+    #node_f1.vm.provision :shell, path: "provision/node_f1.sh"
+    # Run Nebula
+    node_f1.vm.provision :shell, run: "always", inline: "nohup /vagrant/files/nebula -config /vagrant/config/node-f1/config.yml &> /vagrant/logs/node_f1.out&", privileged: true
+    node_f1.vm.post_up_message = "(Node) 'F1' that emulates an end point in Network A -- IS UP AND READY !!!"
+  end    
 
 end
