We add performance tweaks

--- a/nebula-with-one-lighthouse/Vagrantfile
+++ b/nebula-with-one-lighthouse/Vagrantfile
@@ -24,6 +24,10 @@ Vagrant.configure("2") do |config|
       # of the 10.0 and we force the MAC address. Otherwise all vms has the same internal address
       v.customize ['modifyvm', :id, '--natnet1', '192.168.111.0/24']
       v.customize ['modifyvm', :id, '--macaddress1', "5CA1AB1E0041"]
+      # Performance
+      v.customize ["modifyvm", :id, "--cpuexecutioncap", "50"]
+      v.memory = 512
+      v.cpus = 1      
       v.linked_clone = true
       v.name = "router"
     end        
@@ -52,6 +56,10 @@ Vagrant.configure("2") do |config|
       # of the 10.0 and we force the MAC address. Otherwise all vms has the same internal address
       v.customize ['modifyvm', :id, '--natnet1', '192.168.117.0/24']
       v.customize ['modifyvm', :id, '--macaddress1', "5CA1AB1E0047"]
+      # Performance
+      v.customize ["modifyvm", :id, "--cpuexecutioncap", "50"]
+      v.memory = 512
+      v.cpus = 1      
       v.linked_clone = true
       v.name = "lighthouse1"
     end
@@ -90,6 +98,10 @@ Vagrant.configure("2") do |config|
       # of the 10.0 and we force the MAC address. Otherwise all vms has the same internal address      
       v.customize ['modifyvm', :id, '--natnet1', '192.168.112.0/24']
       v.customize ['modifyvm', :id, '--macaddress1', "5CA1AB1E0042"]
+      # Performance
+      v.customize ["modifyvm", :id, "--cpuexecutioncap", "50"]
+      v.memory = 512
+      v.cpus = 1      
       v.linked_clone = true
       v.name = "gw-a"
     end
@@ -119,6 +131,10 @@ Vagrant.configure("2") do |config|
       # of the 10.0 and we force the MAC address. Otherwise all vms has the same internal address
       v.customize ['modifyvm', :id, '--natnet1', '192.168.113.0/24']
       v.customize ['modifyvm', :id, '--macaddress1', "5CA1AB1E0043"]
+      # Performance
+      v.customize ["modifyvm", :id, "--cpuexecutioncap", "50"]
+      v.memory = 512
+      v.cpus = 1      
       v.linked_clone = true
       v.name = "node-a1"
     end
@@ -150,6 +166,10 @@ Vagrant.configure("2") do |config|
       # of the 10.0 and we force the MAC address. Otherwise all vms has the same internal address
       v.customize ['modifyvm', :id, '--natnet1', '192.168.116.0/24']
       v.customize ['modifyvm', :id, '--macaddress1', "5CA1AB1E0046"]
+      # Performance
+      v.customize ["modifyvm", :id, "--cpuexecutioncap", "50"]
+      v.memory = 512
+      v.cpus = 1      
       v.linked_clone = true
       v.name = "node-a2"
     end
@@ -187,6 +207,10 @@ Vagrant.configure("2") do |config|
       # of the 10.0 and we force the MAC address. Otherwise all vms has the same internal address
       v.customize ['modifyvm', :id, '--natnet1', '192.168.114.0/24']
       v.customize ['modifyvm', :id, '--macaddress1', "5CA1AB1E0044"]
+      # Performance
+      v.customize ["modifyvm", :id, "--cpuexecutioncap", "50"]
+      v.memory = 512
+      v.cpus = 1      
       v.linked_clone = true
       v.name = "gw-b"
     end
@@ -216,6 +240,10 @@ Vagrant.configure("2") do |config|
       # of the 10.0 and we force the MAC address. Otherwise all vms has the same internal address
       v.customize ['modifyvm', :id, '--natnet1', '192.168.115.0/24']
       v.customize ['modifyvm', :id, '--macaddress1', "5CA1AB1E0045"]
+      # Performance
+      v.customize ["modifyvm", :id, "--cpuexecutioncap", "50"]
+      v.memory = 512
+      v.cpus = 1      
       v.linked_clone = true
       v.name = "node-b1"
     end
@@ -247,6 +275,10 @@ Vagrant.configure("2") do |config|
       # of the 10.0 and we force the MAC address. Otherwise all vms has the same internal address
       v.customize ['modifyvm', :id, '--natnet1', '192.168.118.0/24']
       v.customize ['modifyvm', :id, '--macaddress1', "5CA1AB1E0048"]
+      # Performance
+      v.customize ["modifyvm", :id, "--cpuexecutioncap", "50"]
+      v.memory = 512
+      v.cpus = 1      
       v.linked_clone = true
       v.name = "node-b2"
     end
@@ -279,6 +311,10 @@ Vagrant.configure("2") do |config|
       # of the 10.0 and we force the MAC address. Otherwise all vms has the same internal address
       v.customize ['modifyvm', :id, '--natnet1', '192.168.126.0/24']
       v.customize ['modifyvm', :id, '--macaddress1', "5CA1AB2E0022"]
+      # Performance
+      v.customize ["modifyvm", :id, "--cpuexecutioncap", "50"]
+      v.memory = 512
+      v.cpus = 1      
       v.linked_clone = true
       v.name = "node-f1"
     end
