--- a/nebula-with-simple-nodes/config/lighthouse1/config.yml
+++ b/nebula-with-simple-nodes/config/lighthouse1/config.yml
@@ -47,9 +47,12 @@ lighthouse:
   # "allow", the default will be "deny", and vice-versa. If both "allow" and
   # "deny" rules are present, then you MUST set a rule for "0.0.0.0/0" as the
   # default.
-  #remote_allow_list:
+  remote_allow_list:
     # Example to block IPs from this subnet from being used for remote IPs.
     #"172.16.0.0/12": false
+
+    # We don't want vagrant internal network to be considered
+    192.168.0.0/16: false
 
     # A more complicated example, allow public IPs but only private IPs from a specific subnet
     #"0.0.0.0/0": true
@@ -63,9 +66,14 @@ lighthouse:
   # All interface rules must be either true or false (and the default will be
   # the inverse). CIDR rules are matched after interface name rules.
   # Default is all local IP addresses.
-  #local_allow_list:
+  local_allow_list:
     # Example to blacklist tun0 and all docker interfaces.
-    #interfaces:
+    interfaces:
+      # We don't want vagrant internal network to be considered
+      eth0: false
+      # Not necessary here, but I don't want to make it show in the logs      
+      10.40.40.0/24: false
+
       #tun0: false
       #'docker.*': false
     # Example to only advertise this subnet to the lighthouse.
@@ -93,10 +101,10 @@ punchy:
   # respond means that a node you are trying to reach will connect back out to you if your hole punching fails
   # this is extremely useful if one node is behind a difficult nat, such as a symmetric NAT
   # Default is false
-  #respond: true
+  respond: true
 
   # delays a punch response for misbehaving NATs, default is 1 second, respond must be true to take effect
-  #delay: 1s
+  delay: 1s
 
 # Cipher allows you to choose between the available ciphers for your network.
 # IMPORTANT: this value must be identical on ALL NODES/LIGHTHOUSES. We do not/will not support use of different ciphers simultaneously!
