--- a/benchmark-ipsec/Vagrantfile
+++ b/benchmark-ipsec/Vagrantfile
@@ -147,6 +147,7 @@ Vagrant.configure("2") do |config|
     SHELL
     # Install some dependencies
     node_a1.vm.provision :shell, path: "provision/node_a1.sh"
+    node_a1.vm.post_up_message = "(Node-a1) IS UP AND READY !!!"
     # Setup key-pair
     # node_a1.vm.provision :shell, privileged: false, inline: "cp /vagrant/files/node_a1_keypair/* /home/vagrant/.ssh/"
   end
