--- a/benchmark-ipsec/Vagrantfile
+++ b/benchmark-ipsec/Vagrantfile
@@ -71,7 +71,7 @@ Vagrant.configure("2") do |config|
         echo 'Network Gateway Configured'
     SHELL
     # Setup ipsec
-    lighthouse1.vm.provision :shell, path: "provision/lighthouse1.sh"
+    lighthouse1.vm.provision :shell, path: "provision/lighthouse1.sh", run: "always"
     # Setup key-pair
     # lighthouse1.vm.provision :shell, privileged: false, inline: "cp /vagrant/files/lighthouse1_keypair/* /home/vagrant/.ssh/"
     
@@ -146,7 +146,7 @@ Vagrant.configure("2") do |config|
         echo 'Network Gateway Configured' 
     SHELL
     # Install some dependencies
-    node_a1.vm.provision :shell, path: "provision/node_a1.sh"
+    node_a1.vm.provision :shell, path: "provision/node_a1.sh", run: "always"
     node_a1.vm.post_up_message = "(Node-a1) IS UP AND READY !!!"
     # Setup key-pair
     # node_a1.vm.provision :shell, privileged: false, inline: "cp /vagrant/files/node_a1_keypair/* /home/vagrant/.ssh/"
